# optimus

./: .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  BotConfig.toml  Cargo.toml  Dockerfile  ExampleBotConfig.toml  README.md  sqlx-data.json
.github/workflows/: check_pr.yml  publish_container.yml  rust.yml
migrations/: 20220501164629_init.sql  20220501164629_user_profile.sql
scripts/: deploy.sh
src/: config.rs  db.rs  init.rs  main.rs  variables.rs
src/command/: about.rs  about_role.rs  am_i_admin.rs  av.rs  bash.rs  bashget.rs  config.rs  editlog.rs  emoji.rs  exec.rs  index_threads.rs  invite.rs  latency.rs  math.rs  mod.rs  note.rs  owner_check.rs  ping.rs  say.rs  slow_mode.rs  some_long_command.rs  status.rs  upper.rs  whois.rs
src/event/: guild_create.rs  guild_member_addition.rs  guild_member_removal.rs  interaction_create.rs  message.rs  message_delete.rs  message_update.rs  mod.rs  new_question.rs  questions_thread.rs  reaction_add.rs  ready.rs  thread_update.rs
src/event/interaction_create/: close_issue.rs  close_thread.rs  getting_started.rs  mod.rs  question_thread_suggestions.rs  utils.rs
src/event/interaction_create/slash_commands/: create_pr.rs  mod.rs  nothing_to_see_here.rs
src/utils/: db.rs  index_threads.rs  misc.rs  mod.rs  parser.rs  substr.rs
systemd_units/: README.md  meilisearch.service  optimus-discord-bot.service
thorne/: BUILD.MD  Cargo.toml  Cargo.toml.orig  LICENSE  README.MD
thorne/.cargo/: config.toml
thorne/docs/: Lib.md
thorne/lib/: english.rs  english.txt  lib.rs  main.rs  number_gen.rs
thorne/tasks/: todo.list
