[package]
name = "optimus"
version = "0.1.0"
authors = ["AXON <axonasif@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
regex = "1.7.3"
urlencoding = "2.1.2"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
meilisearch-sdk = "0.23.0"
words-count = "0.1.4"
html-escape = "0.2.13"
piston_rs = "0.4.3"
async-trait = "0.1.68"
duplicate = "1.0.0"
base64 = "0.21.0"
once_cell = "1.17.1"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-error = "0.2.0"
toml = "0.7.3"
url = "2.3.1"
fastrand = "1.9.0"
openai = "1.0.0-alpha.8"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json"]
version = "0.11.16"

[dependencies.serenity]
path = "serenity/"
default-features = false
features = ["client", "unstable_discord_api", "gateway", "rustls_backend", "model", "utils", "cache", "framework", "standard_framework", "collector"]
#version = "0.10.10"

[dependencies.tokio]
version = "1.27.0"
features = ["macros", "rt-multi-thread", "process"]


[dependencies.anyhow]
version = "1.0.70"
features = ["backtrace"]
