[package]
name = "optimus"
version = "0.1.0"
authors = ["AXON <axonasif@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.102"
serde = { version = "1.0.171", features = ["derive"] }
regex = "1.9.1"
urlencoding = "2.1.2"
# sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
meilisearch-sdk = "0.23.2"
words-count = "0.1.5"
html-escape = "0.2.13"
piston_rs = "0.4.3"
async-trait = "0.1.71"
duplicate = "1.0.0"
base64 = "0.21.2"
once_cell = "1.18.0"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
toml = "0.7.6"
url = "2.4.0"
fastrand = "1.9.0"
openai = { git = "https://github.com/rellfy/openai", rev = "280cf412581d6c5b8e239ce19ae647b877e01838" }
sysinfo = "0.28.4"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json"]
version = "0.11.18"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "f42ec02"
default-features = false
features = ["client", "unstable_discord_api", "gateway", "rustls_backend", "model", "utils", "cache", "framework", "standard_framework", "collector"]
#version = "0.10.10"

[dependencies.tokio]
version = "1.29.1"
features = ["macros", "rt-multi-thread", "process"]


[dependencies.anyhow]
version = "1.0.71"
features = ["backtrace"]
