[package]
name = "optimus"
version = "0.1.0"
authors = ["AXON <axonasif@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
regex = "1.10.0"
urlencoding = "2.1.3"
# sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
meilisearch-sdk = "0.23.2"
words-count = "0.1.6"
html-escape = "0.2.13"
piston_rs = "0.4.3"
async-trait = "0.1.73"
duplicate = "1.0.0"
base64 = "0.21.4"
once_cell = "1.18.0"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
toml = "0.8.2"
url = "2.4.1"
fastrand = "2.0.1"
openai = { git = "https://github.com/rellfy/openai", rev = "280cf412581d6c5b8e239ce19ae647b877e01838" }
sysinfo = "0.29.10"

[dependencies.reqwest]
default-features = false
features = ["rustls-tls", "json"]
version = "0.11.22"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "f42ec02"
default-features = false
features = ["client", "unstable_discord_api", "gateway", "rustls_backend", "model", "utils", "cache", "framework", "standard_framework", "collector"]
#version = "0.10.10"

[dependencies.tokio]
version = "1.33.0"
features = ["macros", "rt-multi-thread", "process"]


[dependencies.anyhow]
version = "1.0.75"
features = ["backtrace"]
